# processforge

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build_and_publish.sh  build_and_upload_pypi.sh  build_and_upload_testpypi.sh  environment.yml  hello.py  pyproject.toml  requirements.txt
.github/workflows/: build-festim.yml  build-openmc.yml  build_and_publish.yml  docker.yml  publish_pypi.yaml
docker/: Dockerfile.festim  Dockerfile.openmc  provider_server.py
docs/: flowsheets.md  provider-docker-images.md  usage.md
flowsheets/: closed-loop-chain.json  example_dynamic_hybrid.json  example_dynamic_tank.json  festim_dynamic_loop.json  hydraulic-chain.json  hydraulic_chain.json
flowsheets/archive/: example_flash.json  hydraulic_chain.json
flowsheets/festim/: festim_2d.json  festim_dynamic_loop.json  hydrogen_transport_1d.json
flowsheets/openmc/: msre_eigenvalue.json
output/: ClosedLoopRecycleExample.mo
processforge/: flowsheet.py  simulate.py  thermo.py
processforge/units/: flash.py
schemas/: flowsheet_schema..json  flowsheet_schema.json
scripts/: fetch_openmc_data.sh
src/: flowsheet.py  result.py  simulate.py  solver.py  thermo.py  validate.py
src/processforge/: __init__.py  __main__.py  _schema.py  compose.py  flowsheet.py  lock.py  provenance.py  result.py  result_schema.py  simulate.py  state.py  thermo.py  types.py  validate.py
src/processforge/analysis/: __init__.py  dof.py
src/processforge/api/: app.py  models.py  openapi.yaml  runner.py  serve.py
src/processforge/cli/: __init__.py  apply.py  common.py  diagram.py  display.py  export_fmu.py  export_modelica.py  init.py  plan.py  run.py  validate.py
src/processforge/eo/: __init__.py  flowsheet.py  jacobian.py  mixin.py  solver.py  stream_var.py
src/processforge/eo/backends/: __init__.py  base.py  casadi_backend.py  pyomo_backend.py  scipy_backend.py
src/processforge/eo/units/: __init__.py  flash_eo.py  heater_eo.py  pipes_eo.py  pump_eo.py  strainer_eo.py  valve_eo.py
src/processforge/fmu/: __init__.py  _fmi_vars.py  builder.py  slave_template.py
src/processforge/modelica/: __init__.py  mo_writer.py  omc_runner.py  transpiler.py  unit_equations.py
src/processforge/pcl/: README.md  __init__.py  compiler.py  namespace.py
src/processforge/providers/: __init__.py  base.py  base_jacobian_mixin.py  cantera_jacobian.py  cantera_provider.py  coolprop_provider.py  festim_provider.py  jacobian_contributor.py  manager.py  modelica_jacobian.py  modelica_provider.py  openmc_provider.py  reference_state_registry.py  registry.py
src/processforge/schemas/: __init__.py  flowsheet_schema.json
src/processforge/schemas/openmc/: openmc_model.py
src/processforge/units/: __init__.py  base.py  cstr.py  festim_membrane.py  flash.py  heater.py  pfr.py  pipes.py  provider_mixin.py  pump.py  registry.py  solver.py  solver_unit.py  strainer.py  tank.py  valve.py
src/processforge/utils/: flowsheet_diagram.py  mermaid_diagram.py  topology.py  unit_consistency.py  validate_flowsheet.py
src/units/: heater.py  pipes.py  pump.py  strainer.py  tank.py  valve.py
tests/: test_cli.py  test_festim_provider.py  test_init.py  test_providers.py  test_state.py  test_types.py
utils/: flowsheet_diagram.py  validate_flowsheet.py  validation.py
