[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processforge"
version = "0.2.9"
description = "A Python-based process simulation framework for chemical engineering applications."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    {name = "Process Forge Team", email = "team@processforge.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering",
]
keywords = ["process", "simulation", "chemical", "engineering", "flowsheet"]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "coolprop>=6.6",
    "matplotlib>=3.9",
    "loguru>=0.7",
    "jsonschema>=4.20",
    "graphviz>=0.20",
    "pandas>=2.2",
    "zarr>=3.0",
    "ompython>=4.0.0",
]

[project.optional-dependencies]
eo = [
    "pyomo>=6.7",
]
eo-casadi = [
    "pyomo>=6.7",
    "casadi>=3.6",
]
fmu = [
    "pythonfmu>=0.6",
]
modelica = [
    "OMPython>=1.4",
]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
    "build",
    "twine",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/urjanova/processforge"
Repository = "https://github.com/urjanova/processforge"
Issues = "https://github.com/urjanova/processforge/issues"

[project.scripts]
processforge = "processforge.simulate:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["processforge*"]

[tool.setuptools.package-data]
"processforge.schemas" = ["*.json"]
